Remove .env.sample file and update configuration to use environment variables for API credentials in src/config.py, src/test.py, and src/exchange/okx_client.py. Enhance debug output for environment variable loading and connection testing.

--- a/.sample.env
+++ b/.sample.env
@@ -2,6 +2,7 @@
 OKX_API_KEY=your_testnet_api_key
 OKX_SECRET=your_testnet_secret
 OKX_PASSPHRASE=your_testnet_passphrase
+OKX_HOSTNAME=eea.okx.com
 OKX_TESTNET=True
 
 # Trading Configuration
